# paper-brain-wide-map

./: README.md  TRN_PSTH_zscored.py  TRN_metadata.py  bootstrap_zscored_PSTH.py  data_loading_examples.py  load_TRN_data.py  playground.py  playing.py  pyproject.toml
brainwidemap/: bwm_loading.py
brainwidemap/decoding/: README.md
